Extended support for asynchronous workflows.