@@ -6,15 +6,15 @@
 
 package nl.colorize.util;
 
-import com.google.common.base.Charsets;
-import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.util.List;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -45,10 +45,10 @@ public class ResourceFileTest {
     public void testOpenFile() throws IOException {
         File testFile = new File("build.gradle");
         assertTrue(testFile.exists());
-        String expected = Files.readString(testFile.toPath(), Charsets.UTF_8);
+        String expected = Files.readString(testFile.toPath(), UTF_8);
         
         ResourceFile resourceFile = new ResourceFile("build.gradle");
-        String actual = resourceFile.read(Charsets.UTF_8);
+        String actual = resourceFile.read(UTF_8);
 
         assertEquals(expected, actual);
     }
@@ -57,16 +57,16 @@ public class ResourceFileTest {
     public void testAbsolutePath(@TempDir File tempDir) throws IOException {
         File tempFile = new File(tempDir, "a.txt");
         assertTrue(tempFile.getAbsolutePath().startsWith("/"));
-        FileUtils.write("test\n", Charsets.UTF_8, tempFile);
+        Files.writeString(tempFile.toPath(), "test\n", UTF_8);
         
         ResourceFile resourceFile = new ResourceFile(tempFile);
-        String contents = resourceFile.read(Charsets.UTF_8);
+        String contents = resourceFile.read(UTF_8);
 
         assertEquals("test\n", contents);
     }
     
     @Test
-    public void testFallbackToClasspath() throws Exception {
+    public void testFallbackToClasspath() {
         File localFile = new File("nl/colorize/util/TestResourceFile.class");
         assertFalse(localFile.exists());
         
@@ -96,20 +96,20 @@ public class ResourceFileTest {
     @Test
     public void testReadText(@TempDir File tempDir) throws Exception {
         File tempFile = new File(tempDir, "test.txt");
-        Files.writeString(tempFile.toPath(), "Test\ntest", Charsets.UTF_8);
+        Files.writeString(tempFile.toPath(), "Test\ntest", UTF_8);
 
         ResourceFile file = new ResourceFile(tempFile);
 
-        assertEquals("Test\ntest", file.read(Charsets.UTF_8));
+        assertEquals("Test\ntest", file.read(UTF_8));
     }
     
     @Test
     public void testReadLines(@TempDir File tempDir) throws Exception {
         File tempFile = new File(tempDir, "test.txt");
-        Files.writeString(tempFile.toPath(), "Test\ntest", Charsets.UTF_8);
+        Files.writeString(tempFile.toPath(), "Test\ntest", UTF_8);
 
         ResourceFile file = new ResourceFile(tempFile);
 
-        assertEquals(ImmutableList.of("Test", "test"), file.readLines(Charsets.UTF_8));
+        assertEquals(List.of("Test", "test"), file.readLines(UTF_8));
     }
 }
