@@ -6,11 +6,10 @@
 
 package nl.colorize.util.stats;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
@@ -26,8 +25,8 @@ class TupleListTest {
         list.add("a", 2);
         list.add("b", 3);
 
-        assertEquals(ImmutableList.of("a", "b"), list.getLeft());
-        assertEquals(ImmutableList.of(2, 3), list.getRight());
+        assertEquals(List.of("a", "b"), list.getLeft());
+        assertEquals(List.of(2, 3), list.getRight());
     }
 
     @Test
@@ -61,14 +60,16 @@ class TupleListTest {
     void fromStream() {
         Tuple<String, Integer> a = Tuple.of("a", 2);
         Tuple<String, Integer> b = Tuple.of("b", 3);
-        Stream<Tuple<String, Integer>> stream = ImmutableList.of(a, b).stream();
+        Stream<Tuple<String, Integer>> stream = List.of(a, b).stream();
 
         assertEquals("[(a, 2), (b, 3)]", TupleList.fromStream(stream).toString());
     }
 
     @Test
     void fromMap() {
-        Map<String, Integer> map = ImmutableMap.of("a", 2, "b", 3);
+        Map<String, Integer> map = new LinkedHashMap<>();
+        map.put("a", 2);
+        map.put("b", 3);
 
         assertEquals("[(a, 2), (b, 3)]", TupleList.fromMap(map).toString());
     }
